# watch-recs

./: .gitignore  .pre-commit-config.yaml  Movies_and_TV.test.csv.gz.dvc  Movies_and_TV.train.csv.gz.dvc  Movies_and_TV.valid.csv.gz.dvc  README.md  commands.py  infer.py  main.py  pyproject.toml
.dvc/: config
checkpoints/: epoch=5-step=1944.ckpt.dvc
configs/: config.yaml
configs/data/: default.yaml
configs/model/: ncf.yaml
configs/training/: default.yaml
data/: dataset.py  download.py
models/: .gitignore  ncf.json.dvc  ncf.onnx.data.dvc  ncf.onnx.dvc  ncf.py  popularity.py
scripts/: export_trt.sh  setup_triton.sh  train.py  triton_client.py
triton/ncf/: config.pbtxt
