[project]
name = "watch-recs"
version = "0.1.0"
description = "Personalized movie and TV recommendation system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.67.1",
    "fire>=0.7.1",
    "hydra-core>=1.3.3",
    "lightning>=2.6.5",
    "matplotlib>=3.10.9",
    "mlflow>=3.14.0",
    "numpy>=2.2.6",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0,<1.21.0",
    "onnxscript>=0.1.0",
    "pandas>=2.3.3",
    "torch>=2.12.1",
    "torchmetrics>=1.9.0",
    "tqdm>=4.68.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data", "models"]

[dependency-groups]
dev = [
  "pre-commit>=3.0.0",
  "ruff>=0.4.0",
]
